@@ -1665,8 +1665,40 @@ multibuild-solaris-i386-cc: multibuild-porting32-cc # TODO
 multibuild-solaris-i386-gcc: multibuild-porting32-gcc # TODO
 
 # Solaris/sparc64 with 32-bit ABI
-multibuild-solaris-sparc-cc: multibuild-porting32-cc # TODO
-multibuild-solaris-sparc-gcc: multibuild-porting32-gcc # TODO
+# Note: build-porting32-cc-portability and build-porting32-cc-wide are not
+# enabled, because Sun cc has problems with WIDE_SOFT.
+multibuild-solaris-sparc-cc: \
+  build-porting32-cc-safety3 \
+  build-porting32-cc-heapcodes \
+  build-porting32-cc-one_free_bit_heapcodes-malloc \
+  build-porting32-cc-one_free_bit_heapcodes-trivialmap \
+  build-porting32-cc-heapcodes-spvw_pages \
+  build-porting32-cc-heapcodes-spvw_mixed_blocks \
+  build-porting32-cc-spvw_pure_blocks \
+  build-porting32-cc-old_gc \
+  build-porting32-cc-multithread_gc \
+  build-porting32-cc-generational_gc-old_gc \
+  build-porting32-cc-generational_gc-multithread_gc \
+  build-porting32-cc-safety0
+# TODO build-porting32-gcc-debug_gcsafety currently has compilation failures.
+multibuild-solaris-sparc-gcc: \
+  build-porting32-gcc-portability \
+  build-porting32-gcc-safety3 \
+  build-porting32-gcc-heapcodes \
+  build-porting32-gcc-one_free_bit_heapcodes-malloc \
+  build-porting32-gcc-one_free_bit_heapcodes-trivialmap \
+  build-porting32-gcc-heapcodes-spvw_pages \
+  build-porting32-gcc-heapcodes-spvw_mixed_blocks \
+  build-porting32-gcc-spvw_pure_blocks \
+  build-porting32-gcc-wide \
+  build-porting32-gcc-limited_memory \
+  build-porting32-gcc-old_gc \
+  build-porting32-gcc-multithread_gc \
+  build-porting32-gcc-generational_gc-old_gc \
+  build-porting32-gcc-generational_gc-multithread_gc \
+  build-porting32-gcc-safety0 \
+  build-porting32-gcc-safety0-optimized \
+  build-porting32-gcc-debug_gcsafety
 
 # Haiku/i386
 multibuild-haiku-32: multibuild-porting32-gcc # TODO
